Use diamond operator for collection instantiations
Replace explicit generic type arguments with the diamond operator (<>) across several classes to reduce verbosity and modernize code. Affected files include IdentifierPoolProcessor, RemoteIdentifierSourceProcessor, SequentialIdentifierGeneratorProcessor, and BaseIdentifierSourceService (updates to HashMap, ConcurrentHashMap, ArrayList, LinkedHashMap instantiations). Also minor documentation/table formatting updates in the LU2 SAST report. No functional behavior changes intended.